# omni-dots

./: .gitignore  1  CLAUDE.md  CLEAN-INSTALL.md  DEV-ENVIRONMENTS.md  PIPELINE.md  PIPELINEv3.md  README.md  WORKFLOW.md  flake.nix
configs/fastfetch/: config.jsonc
configs/ghostty/: config
configs/hypr/: animations.lua  environment.lua  hypridle.conf  hyprland.lua  hyprlock.conf  keybindings.lua  look-and-feel.lua  monitors.lua  rules.lua
configs/kitty/: kitty.conf
configs/rofi/: config.rasi  rofi.rasi
core/: default.nix
home/: apps.nix  default.nix  dell3440.nix  devshell.nix  dotfiles.nix  git.nix  notifications.nix  quickshell.nix  rofi.nix  stylix.nix
hosts/dell3440/: configuration.nix  default.nix  hardware-configuration.nix
hosts/desktop/: default.nix  hardware-configuration.nix
labs/: k8s-registry.nix
labs/k8s-telemetry/: CHEATSHEET.md  README.md  RUNBOOK.md
modules/: amdgpu-compute.nix  audio.nix  bluetooth.nix  fonts.nix  greetd.nix  matugen.nix  nvidiagpu-compute.nix  ssh.nix  stylix.nix
modules/apps/: blender.nix  claude.nix  davinci.nix  desktop-apps.nix  dev-tools.nix  essentials.nix  file-manager.nix  programming.nix  video-editing.nix  virtualization.nix
templates/dev/: .envrc  .gitignore  flake.nix
templates/python/: .envrc  .gitignore  README.md  flake.nix  justfile  pyproject.toml
templates/python/app/: app.py  main.py  requirements.txt  script.py
templates/python/manifests/: deployment.yaml  service.yaml
templates/python/manifests/fastapi/: deployment.yaml  service.yaml
templates/python/manifests/script/: job.yaml
(+34 files in other folders)
